--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ agents/path_planner/build/
 agents/path_planner/hybridastar.c
 agents/path_planner/hybridastar.cpython-36m-x86_64-linux-gnu.so
 agents/path_planner/hybridastar.py
+motivation_videos/
