alternating action peanlty and duelling switched on

--- a/SAC_Discrete/config/sacd.yaml
+++ b/SAC_Discrete/config/sacd.yaml
@@ -9,7 +9,7 @@ start_steps: 5000
 update_interval: 4
 target_update_interval: 500
 use_per: True
-dueling_net: False
+dueling_net: True
 num_eval_steps: 10000
 max_episode_steps: 300
 log_interval: 10
