--- a/SAC_Discrete/config/sacd.yaml
+++ b/SAC_Discrete/config/sacd.yaml
@@ -1,10 +1,10 @@
-num_steps: 1000000
+num_steps: 3000000
 batch_size: 128
 lr: 0.0001
 memory_size: 60000
 gamma: 0.99
 multi_step: 1
-target_entropy_ratio: 0.6
+target_entropy_ratio: 0.98
 start_steps: 25000
 update_interval: 4
 target_update_interval: 3000
@@ -14,3 +14,4 @@ num_eval_steps: 3000
 max_episode_steps: 300
 log_interval: 10
 eval_interval: 10000
+save_interval: 100000
