--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ agents/path_planner/hybridastar.c
 agents/path_planner/hybridastar.cpython-36m-x86_64-linux-gnu.so
 agents/path_planner/hybridastar.py
 motivation_videos/
+path_predictor/*.pkl
+path_predictor/get_prediction.py
