--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ motivation_videos/
 path_predictor/*.pkl
 temp_check/path_predictor/get_prediction.py
 data/
+ISDESPOT/isdespot-ped-pred/is-despot/problems/isdespotp_car/cmake-build-debug/
